--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+requests = "^2.31.0"
+beautifulsoup4 = "^4.12.3"
+pydantic = "^2.7.1"
+types-requests = "^2.31.0.20240406"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
@@ -18,7 +22,7 @@ mypy = "^1.10.0"
 pytest-cov = "^5.0.0"
 
 [tool.mypy]
-python_version = 3.10
+python_version = "3.10"
 # following setting is same as pysen
 # https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
 check_untyped_defs = true
