--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
 pydantic = "^2.7.1"
 types-requests = "^2.31.0.20240406"
+wordcloud = "^1.9.3"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
