feat: update dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ beautifulsoup4 = "^4.12.3"
 pydantic = "^2.7.1"
 types-requests = "^2.31.0.20240406"
 wordcloud = "^1.9.3"
+nltk = "^3.8.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
