--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ types-requests = "^2.31.0.20240406"
 wordcloud = "^1.9.3"
 nltk = "^3.8.1"
 tqdm = "^4.66.4"
+urllib3 = "^2.2.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.1"
